corrected some mistakes